# buzzref

./: BuzzRef.spec  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  buzzref.desktop  index.html  macos-guide.html  org.buzzref.BuzzRef.appdata.xml  pyproject.toml  rename_changes.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  build_appimage.yml  flake8.yml  pytest.yml
auth/: login.html  register.html
beeref/: __main__.py  items.py  view.py
beeref/actions/: __init__.py  actions.py  menu_structure.py  mixin.py
beeref/config/: settings.py
beeref/fileio/: image.py  sql.py
beeref/translations/: __init__.py  beeref_ko.qm  beeref_ko.ts
beeref/widgets/: __init__.py  color_gamut.py  screen_capture.py  settings.py  welcome_overlay.py
buzzref/: __main__.py  commands.py  constants.py  items.py  logging.py  main_controls.py  scene.py  selection.py  utils.py  view.py
buzzref/actions/: __init__.py  actions.py  menu_structure.py  mixin.py
buzzref/assets/: __init__.py
buzzref/config/: __init__.py  (+2 more)
css/: style.css
forum/: category.html  index.html  post.html  write.html
js/: api.js  auth.js  forum.js  i18n.js  main.js
requirements/: build.txt
scripts/: compile_translations.py
tests/: conftest.py  test_assets.py  test_commands.py  test_logging.py  test_main.py  test_scene.py  test_utils.py  test_view.py
tools/: build_appimage.py  find_linux_libs.py  linux_libs.json  linux_libs_notes.rst
translations/: en.json  es.json  fr.json  ja.json  ko.json  zh_CN.json  zh_TW.json
(+62 files in other folders)
