[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["buzzref*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.png"]
"buzzref.translations" = ["*.qm"]

[project]
name = "BuzzRef"
version = "0.3.4-dev"
description = "A simple reference image viewer"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    { name = "Rebecca Breu", email = "rebecca@rbreu.de" },
]
requires-python = ">=3.9"
dependencies = [
    "certifi",
    "exif>=1.3.5",
    "lxml>=5.1.0",
    "pyQt6-Qt6>=6.7.0",
    "pyQt6>=6.7.0",
    "rectangle-packer>=2.0.1",
]

[project.gui-scripts]
buzzref = "buzzref.__main__:main"

[project.urls]
Homepage = "https://github.com/kistf001/buzzref"
Repository = "https://github.com/kistf001/buzzref"
# Documentation =
Issues = "https://github.com/kistf001/buzzref/issues"
Changelog = "https://github.com/kistf001/buzzref/blob/main/CHANGELOG.rst"